# pirebok

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  makefile  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
api/: index.html
changelog/: index.html
contributing/: index.html
docs/: installation.md  usage.md
installation/: index.html
pirebok/: __init__.py  banner.py  cli.py
pirebok/fuzzers/: __init__.py  cmdi_fuzzer.py  fuzzer_builder.py  fuzzer_transformer_resolver_visitor.py  fuzzer_visitor.py  guided_fuzzer_mixin.py  path_traversal_fuzzer.py  payload_pool.py  xss_fuzzer.py
pirebok/fuzzers/cmdi/: guided_random_cmdi_fuzzer.py  random_cmdi_fuzzer.py
pirebok/fuzzers/path_traversal/: guided_random_path_traversal_fuzzer.py  random_path_traversal_fuzzer.py
pirebok/fuzzers/sql/: guided_random_sql_fuzzer.py
pirebok/fuzzers/xss/: guided_random_xss_fuzzer.py  random_xss_fuzzer.py
pirebok/transformers/: __init__.py  cmdi_transformer.py  path_traversal_transformer.py  xss_transformer.py
pirebok/transformers/cmdi/: random_quote_insertion_transformer.py  random_separator_swapping_transformer.py  random_variable_expansion_transformer.py  random_whitespace_alternative_transformer.py  random_wildcard_insertion_transformer.py
pirebok/transformers/generic/: random_comment_injection_transformer.py
pirebok/transformers/path_traversal/: random_depth_variation_transformer.py  random_double_encoding_transformer.py  random_null_byte_appender_transformer.py  random_path_separator_swapping_transformer.py  random_unicode_normalization_transformer.py  random_url_encoding_transformer.py
pirebok/transformers/xss/: random_event_handler_swapping_transformer.py  random_html_entity_encoding_transformer.py  random_js_comment_injection_transformer.py  random_protocol_obfuscation_transformer.py  random_quote_swapping_transformer.py  random_tag_case_transformer.py
search/: search_index.json
tests/: test_cli.py
tests/fuzzers/: test_fuzzer_builder.py  test_guided_random_cmdi_fuzzer.py  test_guided_random_path_traversal_fuzzer.py  test_guided_random_sql_fuzzer.py  test_guided_random_xss_fuzzer.py  test_payload_pool.py
tests/transformers/cmdi/: test_random_quote_insertion_transformer.py  test_random_separator_swapping_transformer.py  test_random_variable_expansion_transformer.py  (+2 more)
usage/: index.html
(+13 files in other folders)
