[project]
name = "pirebok"
dynamic = ["version"]
description = "a guided adversarial fuzzer with evolutionary search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Doğan Can Bakır", email = "dogancanbakir@protonmail.com" },
    { name = "Happy Hacking Space", email = "team@happyhacking.space" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.1",
    "tqdm>=4.66",
]

[project.optional-dependencies]
guided = ["metamaska>=0.0.1"]

[project.urls]
Homepage = "https://github.com/HappyHackingSpace/pirebok"
Documentation = "https://happyhackingspace.github.io/pirebok"
Repository = "https://github.com/HappyHackingSpace/pirebok"

[project.scripts]
pirebok = "pirebok.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "pirebok/_version.py"

[tool.hatch.build.targets.sdist]
include = ["pirebok/"]

[tool.hatch.build.targets.wheel]
packages = ["pirebok"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=6.0",
    "ruff>=0.15.0",
    "mypy>=1.19",
    "pre-commit>=4.5",
    "mkdocs>=1.6",
    "mkdocs-include-markdown-plugin>=7.0",
    "mkdocs-material>=9.6",
    "mkdocstrings-python>=2.0",
    "mkdocs-material-extensions>=1.3",
    "mkdocs-autorefs>=1.4",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E203", "E266"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"_version.py" = ["I001"]

[tool.ruff.lint.isort]
known-first-party = ["pirebok"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pirebok --cov-branch --cov-report=term-missing"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "def main",
]
